--- a/packages/styles/src/core/_vardump.scss
+++ b/packages/styles/src/core/_vardump.scss
@@ -1,48 +1,77 @@
 .wwa-vardump-wrapper {
-  margin: 0 auto;
-}
+  display: flex;
+  justify-content: center;
 
-.wwa-vardump-wrapper>table {
-  margin: 0 auto;
-  text-align: center;
-  width: 560px;
-}
+  > .user-variable-viewer-section {
+    width: 560px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    background-color: #FFCC88;
+    > header {
+      margin: 8px;
+      > .heading-area {
+        display: flex;
+        justify-content: space-between;
+        > h2 {
+          margin: 0;
+          font-size: 1.4em;
+        }
+        > .content-visibility-toggle-button {
+          cursor: pointer;
+        }
+      }
+      > .information {
+        margin: 8px 0 4px 0;
+        padding: 4px;
+        border-radius: 4px;;
+        background-color: #FFFFCC;
+        &[aria-hidden="true"] {
+          display: none;
+        }
+      }
+    }
+    > table.user-variable-viewer {
+      &[aria-hidden="true"] {
+        display: none;
+      }
+      margin: 0 8px 8px 8px;
+      width: calc(100% - 16px);
+      box-sizing: border-box;
+      text-align: center;
+      border-spacing: 1px;
+      > tbody {
+        > tr[data-row-content-type="index"] > th {
+          border-radius: 8px 8px 0 0;
+          background-color: #FFFF66;
+          position: relative;
 
-.wwa-vardump-wrapper>table th.varlist-header {
-  background-color: orange;
-}
-
-.wwa-vardump-wrapper>table tr.var-number>th {
-  background-color: #FFFF66;
-  position: relative;
-  &[data-labelled-var-index="true"] {
-    font-weight: bold;
-    text-decoration: underline;
-    background-color: #66FFFF;
-    cursor: pointer;
-  }
-  & > div {
-    cursor: auto;
-    position: absolute;
-    top: 15px;
-    left: 45px;
-    display: block;
-    width: max-content;
-    background-color: #000000;
-    color: #FFFFFF;
-    z-index: 100;
-    padding: 5px;
-    &[aria-hidden="true"] {
-      display: none;
+          &[data-labelled-var-index="true"] {
+            font-weight: bold;
+            text-decoration: underline;
+            background-color: #66FFFF;
+            cursor: pointer;
+          }
+          & > div {
+            cursor: auto;
+            position: absolute;
+            top: 15px;
+            left: 45px;
+            display: block;
+            width: max-content;
+            background-color: #000000;
+            color: #FFFFFF;
+            z-index: 100;
+            padding: 5px;
+            &[aria-hidden="true"] {
+              display: none;
+            }
+          }
+        }
+        > tr[data-row-content-type="value"] > td {
+          border-radius: 0 0 8px 8px;
+          background-color: #FFFFCC;
+        }
+      }
     }
   }
-}
-
-.wwa-vardump-wrapper>table tr.var-val>td,
-.wwa-vardump-wrapper>table>td.varlist-information {
-  background-color: #FFFFCC;
-}
-
-.wwa-vardump-wrapper>table th, .wwa-vardump-wrapper>table td {
-  width: 3em;
 }
