refactor(vardump): さらにリファクタ

--- a/packages/styles/src/core/_vardump.scss
+++ b/packages/styles/src/core/_vardump.scss
@@ -51,7 +51,7 @@
             background-color: #66FFFF;
             cursor: pointer;
           }
-          & > div {
+          > .user-variable-label {
             cursor: auto;
             position: absolute;
             top: 15px;
