--- a/packages/page-generator/src/wwa.pug
+++ b/packages/page-generator/src/wwa.pug
@@ -29,6 +29,7 @@ html(lang="ja")
                 data-wwa-virtualpad-enable=wwa.attributes["data-wwa-virtualpad-enable"]
                 data-wwa-virtualpad-viewport-fit-enable=wwa.attributes["data-wwa-virtualpad-viewport-fit-enable"]
                 data-wwa-virtualpad-controller-elm=wwa.attributes["data-wwa-virtualpad-controller-elm"]
+                data-wwa-picture-image-names-file=wwa.attributes["data-wwa-picture-image-names-file"]
             )
 
         if virtualPadController
