fix: object 形式の場合は名前付き変数を全体表示させる
切れてる状態で表示されていて、まだ完全に表示できているわけではありません

--- a/packages/styles/src/core/_vardump.scss
+++ b/packages/styles/src/core/_vardump.scss
@@ -23,8 +23,12 @@
         max-width: 12em;
         > .index, > .value {
           width: 100%;
-          text-overflow: ellipsis;
           overflow: hidden;
+        }
+        &.user-variable-card--is-trimmed {
+          > .index, > .value {
+            text-overflow: ellipsis;
+          }
         }
       }
     }
