feat(2025): あけましておめでとうございます

--- a/packages/engine/debug/index.pug
+++ b/packages/engine/debug/index.pug
@@ -15,8 +15,8 @@ html(lang="ja")
     p
         | Internet RPG &quot;
         a(href="http://www.wwajp.com") World Wide Adventure
-        | &quot; &copy; 1996-2016 NAO
+        | &quot; &copy; 1996-#{page.thisYear} NAO
     p
         | &quot;
         a(href="http://wwawing.com") WWA Wing
-        | &quot; &copy; 2013-#{page.thisYear} WWA Wing Team
+        | &quot; &copy; 2015-#{page.thisYear} WWA Wing Team
