chore: 超不安定版表記削除

--- a/packages/styles/src/core/_canvas.scss
+++ b/packages/styles/src/core/_canvas.scss
@@ -40,7 +40,7 @@ canvas.wwa-canvas {
     > #unstable-version-warning {
         @include cover_message(3);
         font-weight: bold;
-        background-color: black;
+        background-color: red;
         color: white;
     }
 
